Imperial Units 2.71 #40862

Closed
opened 2014-06-29 01:36:26 +02:00 by Aaron Smithey · 8 comments

System Information
Windows 7 x64 Nividia GeForce GTX 660 Ti

Blender Version
Broken: 2.71 9337574
Worked: (optional)

Short description of error
Imperial units not behaving as in older versions.

Exact steps for others to reproduce the error

When using scene scale set to .3048 and moving a face of the default cube, it moves the face .305" and not 1'. In older versions the face would be moved 1'-0".

**System Information** Windows 7 x64 Nividia GeForce GTX 660 Ti **Blender Version** Broken: 2.71 9337574 Worked: (optional) **Short description of error** Imperial units not behaving as in older versions. **Exact steps for others to reproduce the error** When using scene scale set to .3048 and moving a face of the default cube, it moves the face .305" and not 1'. In older versions the face would be moved 1'-0".
Author

Changed status to: 'Open'

Changed status to: 'Open'
Aaron Smithey self-assigned this 2014-06-29 01:36:26 +02:00
Author

Added subscriber: @AaronSmithey

Added subscriber: @AaronSmithey

Added subscriber: @mont29

Added subscriber: @mont29

I do not really understand your issue, please be more precise about what you do, what you expect and what you get - and please always attach a .blend file to reproduce the issue.

I do not really understand your issue, please be more precise about what you do, what you expect and what you get - and please always attach a .blend file to reproduce the issue.
Author

No need for a .blend file...use default cube.

  1. In Blender 2.71, open a default scene, select imperial units and degrees. Set scene scale to .3048, this is the conversion factor for imperial units.

  2. The default cube will show the dimensions as 2' x 2 'x 2'.

  3. In edit mode, turn in edge length, grab a face of the default cube and move it in the z axis 1'. You will see that the edge length of the cube does not show 3' but it shows 2.305'. This is incorrect. It should show an edge length of 3'.

  4. Go to Blender 2.68a and do these same steps and you will see the cube show 3' as it should.

Visit this link if you need more information about using imperial units in Blender. http://www.katsbits.com/tutorials/blender/metric-imperial-units.php

I hope this helps.

Aaron

No need for a .blend file...use default cube. 1. In Blender 2.71, open a default scene, select imperial units and degrees. Set scene scale to .3048, this is the conversion factor for imperial units. 2. The default cube will show the dimensions as 2' x 2 'x 2'. 3. In edit mode, turn in edge length, grab a face of the default cube and move it in the z axis 1'. You will see that the edge length of the cube does not show 3' but it shows 2.305'. This is incorrect. It should show an edge length of 3'. 4. Go to Blender 2.68a and do these same steps and you will see the cube show 3' as it should. Visit this link if you need more information about using imperial units in Blender. http://www.katsbits.com/tutorials/blender/metric-imperial-units.php I hope this helps. Aaron
Aaron Smithey was unassigned by Bastien Montagne 2014-06-30 10:15:07 +02:00
Bastien Montagne self-assigned this 2014-06-30 10:15:07 +02:00

This issue was referenced by cadf77d5ef

This issue was referenced by cadf77d5ef97935885802d1841184d9a044d2249

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cadf77d5ef.

Closed by commit cadf77d5ef.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40862
No description provided.