Fix T40862: numinput transform did not take into account scale_length.